--- a/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inmobiliaria_2022.Models.Inmueble
 
 @{
-    ViewData["Title"] = "eliminar";
+    ViewData["Title"] = "Deshabilitar";
 }
 <div class="card bg-light border border-primary">
         <div class="card-header border-bottom border-primary bg-light">
