--- a/Inmobiliaria_2022/Views/Contratos/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Create.cshtml
@@ -1,20 +1,13 @@
 ﻿@model Inmobiliaria_2022.Models.Contrato
 
-@{
-    ViewData["Title"] = "Crear";
-}
+@{ViewData["Title"] = "Crear";}
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary">Crear Contrato</h4>
-        </div>
+        <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary">Nuevo Contrato</h4></div>
         <div class="card-body">
-
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <input asp-for="Id" class="form-control" type="hidden" />
-                </div>
+                <div class="form-group"><input asp-for="Id" class="form-control" type="hidden" /></div>
                 <div class="form-group">
                     <label asp-for="Descripcion" class="control-label"></label>
                     <input asp-for="Descripcion" class="form-control" required />
@@ -57,14 +50,12 @@
                     </select>
                     <span asp-validation-for="InquilinoId" class="text-danger"> </span>
                 </div>
-         
+      
                 <div class="form-group">
-                    <input type="submit" value="Crear" class="btn btn-primary" />
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
                     <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
                 </div>
             </form>
-
-
         </div>
     </div>
 
