--- a/Inmobiliaria_2022/Views/Contratos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Index.cshtml
@@ -4,17 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light text-center">
-        <h3>Contrato</h3>
-    </div>
-    <div class="card-header border-bottom border-primary bg-light">
-        <a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a>
-    </div>
-    <div class="card-body">
-        <h5 class="card-title text-primary">Lista</h5>
+<div class="card bg-light border border-primary"><div class="card-header border-bottom border-primary bg-light text-center"><h3>Contrato</h3></div>
+    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
+    <div class="card-body"><h5 class="card-title text-primary">Lista</h5>
 
         <div class="input-group-prepend mb-2">
+            <a class="btn btn-info" asp-action="Index" asp-route-id="0">Todos</a>
             <a class="btn btn-info" asp-action="Index" asp-route-id="1">Vigentes</a>
             <a class="btn btn-info" asp-action="Index" asp-route-id="2">No vigentes</a>
             <a class="btn btn-info" asp-action="Index" asp-route-id="3">Vigentes por fecha</a>
@@ -24,41 +19,20 @@
 <table class="table">
     <thead>
         <tr>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>*@
-            @*<th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.FechaAlta)
-            </th>
+                @Html.DisplayNameFor(model => model.FechaAlta)</th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaBaja)
-            </th>
+                @Html.DisplayNameFor(model => model.FechaBaja)</th>
             <th>
-                @Html.DisplayNameFor(model => model.Monto)
-            </th>
-            <th>
-@*                @Html.DisplayNameFor(model => model.InmuebleId)
-*@                Inmueble
-            </th>
-            <th>
-                Inquilino
-@*                @Html.DisplayNameFor(model => model.InquilinoId)
-*@            </th>
+                @Html.DisplayNameFor(model => model.Monto)</th>
+            <th>@*@Html.DisplayNameFor(model => model.InmuebleId)*@Inmueble</th>
+            <th>Inquilino@*@Html.DisplayNameFor(model => model.InquilinoId)*@</th>
             <th>Propietario</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>*@
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaAlta)
             </td>
@@ -84,8 +58,8 @@
                 @Html.ActionLink("Detalles", "Details", new {  id=item.Id  }) |
                 @Html.ActionLink("Eliminar", "Delete", new {  id=item.Id  }) |
                 <a asp-controller="Pagos" asp-action="ListaPagos" asp-route-id="@item.Id" title="Lista de pagos">Lista de Pagos</a> @*exit*@ 
-@*                @Html.ActionLink("VigentesxFechas", "ContratoVigentesxFecha", new {  id=item.Id  }) |
-*@            </td>
+          
+            </td>
         </tr>
 }
     </tbody>
