--- a/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
@@ -4,69 +4,30 @@
     ViewData["Title"] = "Inquilinos";
 }
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light text-center">
-        <h3>Inquilino</h3>
-    </div>
-    <div class="card-header border-bottom border-primary bg-light">
-        <a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a>
-    </div>
-    <div class="card-body">
-        <h5 class="card-title text-primary">Lista</h5>
-<table class="table">
+    <div class="card-header border-bottom border-primary bg-light text-center"><h3>Inquilino</h3></div>
+    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
+    <div class="card-body"><h5 class="card-title text-primary">Lista</h5>
+  <table class="table">
     <thead>
         <tr>
-           @* <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Dni)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Telefono)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>*@
+            <th>@Html.DisplayNameFor(model => model.Nombre)</th>
+            <th>@Html.DisplayNameFor(model => model.Apellido)</th>
+            <th>@Html.DisplayNameFor(model => model.Dni)</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>*@
+            <td>@Html.DisplayFor(modelItem => item.Nombre)</td>
+            <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
+            <td>@Html.DisplayFor(modelItem => item.Dni)</td>
             <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dni)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>*@
-            <td>
-                                 @*Titulo*@
                 @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
                 @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })
-                
-
             </td>
-        </tr>
-}
+        </tr>}
     </tbody>
   </table>
  </div>
