--- a/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
@@ -1,54 +1,25 @@
 ﻿@model Inmobiliaria_2022.Models.Usuario
 
-@{
-    ViewData["Title"] = "Delete";
-}
+@{ViewData["Title"] = "Eliminar";}
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary mt-2">Eliminar Usuario</h4>
-        </div>
+        <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Usuario</h4></div>
         <div class="card-body">
-
     <dl class="row">
-        
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rol)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RolNombre)
-        </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RolNombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RolNombre)
-        </dd>*@
-        </dl>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Rol)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.RolNombre)</dd>
+    </dl>
 
-        <form asp-action="Delete">
-            <div class="form-group">
-                <input type="submit" value="Eliminar" class="btn btn-danger" />
-                <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-            </div>
-        </form>
+    <form asp-action="Delete">
+        <div class="form-group">
+            <input type="submit" value="Eliminar" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+        </div>
+    </form>
 </div>
