--- a/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@model IEnumerable<Inmobiliaria_2022.Models.Inmueble>
 
-@{
-    ViewData["Title"] = "Inmuebles";
-}
+@{ViewData["Title"] = "Lista";}
+
 <div class="card bg-light border border-primary">
     <div class="card-header border-bottom border-primary bg-light text-center"><h3>Inmueble</h3></div>
     <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
@@ -14,22 +13,20 @@
             <a class="btn btn-info" asp-action="Index" asp-route-id="3">No Disponible</a>
         </div>
 
-        <table class="table table-hover table-bordered w-100" id="dtHorizontalVertical">
+        <table class="table table-hover table-bordered w-100" >      
         <thead class="table-info">
          <tr>
-            <th>@Html.DisplayNameFor(model => model.Direccion)</th>
+            <th> @Html.DisplayNameFor(model => model.Direccion)</th>
             <th>@Html.DisplayNameFor(model => model.Ambientes)</th>
             <th>@Html.DisplayNameFor(model => model.Tipo)</th>
             <th>@Html.DisplayNameFor(model => model.Costo)</th>
             <th>@*@Html.DisplayNameFor(model => model.PropietarioId)*@Propietario</th>
             <th style="display:none;">@Html.DisplayNameFor(model => model.Propietario.Dni)</th>
-            <th></th>
         </tr>
-       </thead>
+    </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-          
             <td>@Html.DisplayFor(modelItem => item.Direccion)</td>
             <td>@Html.DisplayFor(modelItem => item.Ambientes)</td>
             <td>@Html.DisplayFor(modelItem => item.TipoNombre)</td>
@@ -37,23 +34,23 @@
             <td>@(item.Propietario.Nombre + " " + item.Propietario.Apellido)</td>
             <td style="display:none;">@Html.DisplayFor(modelItem => item.Propietario.Dni)</td>
             <td class="d-flex justify-content-center">
-            <div class="btn-group" role="group">
-
-                <a asp-action="Edit" asp-route-id="@item.Id" asp-ro class="btn btn-warning"><i class="fas fa-edit">Editar</i></a>
-                <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-info"><i class="fas fa-edit">Detalle</i></a>
-                <a asp-action="Delete" asp-route-id="@item.Id" asp-ro class="btn btn-danger"><i class="fas fa-edit">Eliminar</i></a>
+             <div class="btn-group" role="group">
+                 <a asp-action="Edit" asp-route-id="@item.Id" asp-ro class="btn btn-warning"><i class="fas fa-edit">Editar</i></a>
+                 <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-dark"><i class="fas fa-edit">Detalle</i></a>
+                 <a asp-action="Delete" asp-route-id="@item.Id" asp-ro class="btn btn-danger"><i class="fas fa-edit">Eliminar</i></a>
 
                 @if (item.EstaPublicado == false)
                 {
-                    <a asp-action="Habilitar" asp-route-id="@item.Id" class="btn btn-light"><i class="fas fa-minus-square"></i>Habilitar</a>                    
+                    <a asp-action="Habilitar" asp-route-id="@item.Id" class="btn btn-primary"><i class="fas fa-minus-square"></i>Habilitar</a>                    
                 }
                 else
                 {
                     <a asp-action="Deshabilitar" asp-route-id="@item.Id" class="btn btn-secondary"><i class="fas fa-minus-square"></i>Deshabilitar</a>                                  
                 }
-            </div>              
+             </div>
+            </td>
         </tr>}
-     </tbody>
-   </table>
+    </tbody>
+  </table>
  </div>
 </div>
