--- a/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
@@ -1,67 +1,33 @@
 ﻿@model Inmobiliaria_2022.Models.Contrato
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary mt-2">Eliminar Inmueble</h4>
-        </div>
-        <div class="card-body">
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaAlta)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaAlta)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaBaja)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaBaja)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Monto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Monto)
-        </dd>
-        <dt class = "col-sm-2">
-            @*@Html.DisplayNameFor(model => model.InmuebleId)*@
-            Inmueble
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.inmueble.Direccion)
-        </dd>
-        <dt class = "col-sm-2">
-            @*@Html.DisplayNameFor(model => model.InquilinoId)*@
-            Inquilino
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.inquilino.Apellido) @Html.DisplayFor(model => model.inquilino.Nombre)
-
-        </dd>
-    </dl>
+    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Inmueble</h4></div>
+    <div class="card-body">
+        <dl class="row">
     
-   <form asp-action="Delete">
-        <div class="form-group">
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-        </div>
-    </form>
-
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Descripcion)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Descripcion)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaAlta)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaAlta)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaBaja)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaBaja)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Monto)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Monto)</dd>
+            <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.InmuebleId)*@Inmueble</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.inmueble.Direccion)</dd>
+            <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.InquilinoId)*@Inquilino</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.inquilino.Apellido) @Html.DisplayFor(model => model.inquilino.Nombre)</dd>
+        </dl>      
     </div>
+     <div class="card-header border-top border-primary bg-light">
+           <form asp-action="Delete">
+                <div class="form-group">
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                    <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+                </div>
+            </form>
+     </div>
  </div>
