--- a/Inmobiliaria_2022/Views/Contratos/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Details.cshtml
@@ -1,29 +1,31 @@
 ﻿@model Inmobiliaria_2022.Models.Contrato
 
-@{
-    ViewData["Title"] = "Detalle";
-}
-<h1>Detalle</h1>
-<div>
-    <h4>Contrato</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Descripcion)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Descripcion)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaAlta)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaAlta)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaBaja)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaBaja)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Monto)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Monto)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.InmuebleId)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.InmuebleId)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.InquilinoId)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.InquilinoId)</dd>
-    </dl>
+@{ViewData["Title"] = "Detalle";}
+
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Contrato</h4></div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Descripcion)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Descripcion)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaAlta)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaAlta)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.FechaBaja)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.FechaBaja)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Monto)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Monto)</dd>
+            <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.InmuebleId)*@Inmueble</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.inmueble.Direccion)</dd>
+            <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.InquilinoId)*@Inquilino</dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.inquilino.Nombre)
+                @Html.DisplayFor(model => model.inquilino.Apellido)
+            </dd>
+        </dl>
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+        <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
+    </div>
 </div>
-<div>
-    <a asp-action="Index">Volver al Listado</a>
-</div>
+
+
