--- a/Inmobiliaria_2022/Views/Contratos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Index.cshtml
@@ -1,30 +1,26 @@
 ﻿@model IEnumerable<Inmobiliaria_2022.Models.Contrato>
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ViewData["Title"] = "Lista";}
 
-<div class="card bg-light border border-primary"><div class="card-header border-bottom border-primary bg-light text-center"><h3>Contrato</h3></div>
-    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light text-center"><h3>Contrato</h3></div>
+    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Nuevo Contrato</a></div>
     <div class="card-body"><h5 class="card-title text-primary">Lista</h5>
 
         <div class="input-group-prepend mb-2">
             <a class="btn btn-info" asp-action="Index" asp-route-id="0">Todos</a>
             <a class="btn btn-info" asp-action="Index" asp-route-id="1">Vigentes</a>
-            <a class="btn btn-info" asp-action="Index" asp-route-id="2">No vigentes</a>
+          @*<a class="btn btn-info" asp-action="Index" asp-route-id="2">No vigentes</a>
             <a class="btn btn-info" asp-action="Index" asp-route-id="3">Vigentes por fecha</a>
-            <a class="btn btn-info" asp-action="Index" asp-route-id="4">Inmuebles disponibles</a>
+            <a class="btn btn-info" asp-action="Index" asp-route-id="4">Inmuebles disponibles</a>*@
         </div>
 
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaAlta)</th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaBaja)</th>
-            <th>
-                @Html.DisplayNameFor(model => model.Monto)</th>
+            <th>@Html.DisplayNameFor(model => model.FechaAlta)</th>
+            <th>@Html.DisplayNameFor(model => model.FechaBaja)</th>
+            <th>@Html.DisplayNameFor(model => model.Monto)</th>
             <th>@*@Html.DisplayNameFor(model => model.InmuebleId)*@Inmueble</th>
             <th>Inquilino@*@Html.DisplayNameFor(model => model.InquilinoId)*@</th>
             <th>Propietario</th>
@@ -33,18 +29,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaAlta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaBaja)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Monto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.inmueble.Direccion)
-            </td>
+            <td>@Html.DisplayFor(modelItem => item.FechaAlta)</td>
+            <td>@Html.DisplayFor(modelItem => item.FechaBaja)</td>
+            <td>@Html.DisplayFor(modelItem => item.Monto)</td>
+            <td>@Html.DisplayFor(modelItem => item.inmueble.Direccion)</td>
             <td>
                 @Html.DisplayFor(modelItem => item.inquilino.Apellido)
                 @Html.DisplayFor(modelItem => item.inquilino.Nombre)
@@ -58,11 +46,9 @@
                 @Html.ActionLink("Detalles", "Details", new {  id=item.Id  }) |
                 @Html.ActionLink("Eliminar", "Delete", new {  id=item.Id  }) |
                 <a asp-controller="Pagos" asp-action="ListaPagos" asp-route-id="@item.Id" title="Lista de pagos">Lista de Pagos</a> @*exit*@ 
-          
             </td>
-        </tr>
-}
+        </tr>}
     </tbody>
-</table>
-</div>
+  </table>
+ </div>
 </div>
