--- a/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
@@ -1,38 +1,79 @@
 ﻿@model Inmobiliaria_2022.Models.Inmueble
 
-@{ViewData["Title"] = "Detalle";}
-
+@{
+    ViewData["Title"] = "Detalle";
+}
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Inmueble</h4></div>
-    <div class="card-body">
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Direccion)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Direccion)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Ambientes)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Ambientes)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Tipo)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.TipoNombre)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Costo)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Costo)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Superficie)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Superficie)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Latitud)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Latitud)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Longitud)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Longitud)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.EstaPublicado)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.EstaPublicado)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.EstaHabilitado)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.EstaHabilitado)</dd>
-        <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.PropietarioId)*@Propietario</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Propietario.Nombre)@Html.DisplayFor(model => model.Propietario.Apellido)</dd>
-     </dl>
-     </div>
- </div>
- <form asp-action="Details">
-    <div class="form-group">
-        <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Inmueble</h4>
+        </div>
+        <div class="card-body">
+        <dl class="row">
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Direccion)
+      </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Direccion)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Ambientes)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Ambientes)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Tipo)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Tipo)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.TipoNombre)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.TipoNombre)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Costo)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Costo)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Superficie)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Superficie)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Latitud)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Latitud)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Longitud)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Longitud)
+            </dd>
+      
+            <dt class = "col-sm-2">
+    @*            @Html.DisplayNameFor(model => model.PropietarioId)
+    *@            Propietario
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Propietario.Nombre)
+                @Html.DisplayFor(model => model.Propietario.Apellido) 
+            </dd>
+        </dl>
     </div>
- </form>
+     <div class="card-header border-top border-primary bg-light">
+           <form asp-action="Delete">
+                <div class="form-group">
+                    <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+                </div>
+            </form>
+     </div>
+</div>
