--- a/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
@@ -5,11 +5,12 @@
 }
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary mt-2">Editar Inmueble</h4>
-        </div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Editar Inmueble</h4>
+    </div>
+    <form asp-action="Edit">
         <div class="card-body">
-        <form asp-action="Edit">
+        
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -63,7 +64,7 @@
                 <input asp-for="Longitud" class="form-control" type="number" />
                 <span asp-validation-for="Longitud" class="text-danger"></span>
             </div>
-           @* <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="EstaPublicado" class="control-label"></label>
                 <input asp-for="EstaPublicado" class="form-control" />
                 <span asp-validation-for="EstaPublicado" class="text-danger"></span>
@@ -78,21 +79,24 @@
                 <select class="form-control" name="PropietarioId">
                     @foreach (var item in (IList<Propietario>)ViewBag.Propietarios)
                     {
-                       @:<option @(item.Id == Model.PropietarioId? "selected" : "") value="@item.Id">@(item.Nombre + " " + item.Apellido)</option>
+                        @:<option @(item.Id == Model.PropietarioId? "selected" : "") value="@item.Id">@(item.Nombre + " " + item.Apellido)</option>
                     }
                 </select>
                 <span asp-validation-for="PropietarioId" class="text-danger"></span>
             </div>
+            
+        </div>
+         <div class="card-header border-top border-primary bg-light">
             <div class="form-group">
                 <input type="submit" value="Editar" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
             </div>
-        </form>
-    </div>
+         </div>
+    </form>
+
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
 
