--- a/Inmobiliaria_2022/Views/Inquilinos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Delete.cshtml
@@ -1,31 +1,59 @@
 ﻿@model Inmobiliaria_2022.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Eliminar";
+    ViewData["Title"] = "Delete";
 }
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Inquilino</h4></div>
-    <div class="card-body">
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Dni)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Dni)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Telefono)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Telefono)</dd>
-        <dt class = "col-sm-2"> @Html.DisplayNameFor(model => model.Email)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <div class="form-group">
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-        </div>
-    </form>
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Eliminar Inquilino</h4>
     </div>
-</div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Apellido)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Apellido)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Dni)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Dni)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Telefono)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        </dl>
+    
+   </div>
+     <div class="card-header border-top border-primary bg-light">
+           <form asp-action="Delete">
+                <div class="form-group">
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                    <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+                </div>
+            </form>
+        </div>
+ </div>
