--- a/Inmobiliaria_2022/Views/Inquilinos/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Details.cshtml
@@ -1,26 +1,53 @@
 ﻿@model Inmobiliaria_2022.Models.Inquilino
 
-@{ViewData["Title"] = "Detalle";}
-
-<h1>Detalle</h1>
-<div>
-    <h4>Inquilino</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Dni)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Dni)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Telefono)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Telefono)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Index">Volver al Listado</a>
+@{
+    ViewData["Title"] = "Detalle";
+}
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Inquilino</h4>
+    </div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Apellido)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Apellido)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Dni)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Dni)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Telefono)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        </dl>
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+        <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
+    </div>
 </div>
