--- a/Inmobiliaria_2022/Views/Inquilinos/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Edit.cshtml
@@ -8,8 +8,9 @@
         <div class="card-header border-bottom border-primary bg-light">
             <h4 class="card-title text-primary mt-2">Editar Inquilino</h4>
         </div>
-        <div class="card-body">
         <form asp-action="Edit">
+        <div class="card-body">
+        
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <input type="hidden" name="Id" value="@Model.Id" />
@@ -39,12 +40,16 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Editar" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
-            </div>
-        </form>
+            
+        
     </div>
+     <div class="card-header border-top border-primary bg-light">
+        <div class="form-group">
+            <input type="submit" value="Editar" class="btn btn-primary" />
+            <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+        </div>
+     </div>
+    </form>
 </div>
 
 @section Scripts {
