--- a/Inmobiliaria_2022/Views/Pagos/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Details.cshtml
@@ -1,32 +1,57 @@
 ﻿@model Inmobiliaria_2022.Models.Pago
 
-@{ViewData["Title"] = "Detalle";}
-
+@{
+    ViewData["Title"] = "Detalle";
+}
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Pago</h4></div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Pago</h4>
+    </div>
     <div class="card-body">
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Numero)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Numero)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Fecha)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Fecha)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Importe)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Importe)</dd>
-        <dt class = "col-sm-2">@*@Html.DisplayNameFor(model => model.ContratoId)*@Contrato</dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contrato.Descripcion)
-            @Html.DisplayFor(model => model.Contrato.FechaAlta)
-            @Html.DisplayFor(model => model.Contrato.FechaBaja)
-            @Html.DisplayFor(model => model.Contrato.Monto)
-        </dd>
-    </dl>
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Numero)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Numero)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Fecha)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Fecha)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Importe)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Importe)
+            </dd>
+            <dt class = "col-sm-2">
+    @*            @Html.DisplayNameFor(model => model.ContratoId)
+    *@            Contrato
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Contrato.Descripcion)
+                @Html.DisplayFor(model => model.Contrato.FechaAlta)
+                @Html.DisplayFor(model => model.Contrato.FechaBaja)
+                @Html.DisplayFor(model => model.Contrato.Monto)
+            </dd>
+          @*  <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Buscar)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Buscar)
+            </dd>*@
+        </dl>
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+        <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
     </div>
 </div>
-<form asp-action="Details">
-    <div class="form-group">
-        <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
-    </div>
-</form>
-
