--- a/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
@@ -1,35 +1,55 @@
 ﻿@model IEnumerable<Inmobiliaria_2022.Models.Pago>
 
 @{
-    ViewData["Title"] = "Listapagos";
+    ViewData["Title"] = "Lista";
 
 }
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light text-center"><h3>Lista de pagos</h3></div>
-    <div class="card-header border-bottom border-primary bg-light">
-       <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear</a> @*exit*@
+    
+    <div class="card-header border-bottom border-primary bg-light text-center">
+        <h3>Lista de Pagos</h3>
     </div>
-    <div class="card-body"><h5 class="card-title text-primary">Lista</h5>
+    <div class="card-header border-bottom border-primary bg-light">
+        <a class="btn btn-success text-white asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear</a> @*exit*@
+        
+    </div>
+    <div class="card-body">
+        <h5 class="card-title text-primary">Lista</h5>
+@*<h1>Listapagos</h1><p> <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear nuevo</a> exit</p>*@   
 <table class="table">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Numero)</th>
-            <th>@Html.DisplayNameFor(model => model.Fecha)</th>
-            <th>@Html.DisplayNameFor(model => model.Importe)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Numero)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Fecha)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Importe)
+            </th>
         </tr>
     </thead>
     <tbody>
         @if(Model!=null)
 @foreach (var item in Model) {
         <tr>
-            <td> @Html.DisplayFor(modelItem => item.Numero)</td>
-            <td>@Html.DisplayFor(modelItem => item.Fecha)</td>
-            <td>@Html.DisplayFor(modelItem => item.Importe)</td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Numero)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fecha)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Importe)
+            </td>
         </tr>
         }
 
     </tbody>
   </table>
  </div>
+    <div class="card-header border-top border-primary bg-light">
+        <a class="btn btn-secondary" asp-controller="Contratos" asp-action="Index">Volver al Lista</a>
+    </div>
 </div>
- <a asp-controller="Contratos" asp-action="Index">Volver</a> 
