--- a/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
@@ -5,11 +5,17 @@
 }
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary">Nuevo Propietario</h4></div>
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary">Nuevo Propietario</h4>
+        </div>
+        <form asp-action="Create">
         <div class="card-body">
-            <form asp-action="Create">
+
+            
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group"><input asp-for="Id" class="form-control" type="hidden" /></div>
+                <div class="form-group">
+                    <input asp-for="Id" class="form-control" type="hidden" />
+                </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -40,15 +46,20 @@
                 <input asp-for="Clave" class="form-control" required />
                 <span asp-validation-for="Clave" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           
+        
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+     <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
             </div>
-        </form>
     </div>
+    </form>
 </div>
 
       
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
