--- a/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
@@ -10,12 +10,12 @@
         </div>
         <div class="card-body">
     <dl class="row">
-        <dt class = "col-sm-2">
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -46,19 +46,20 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Clave)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Clave)
-        </dd>
+        </dd>*@
     </dl>
-    
-    <form asp-action="Delete">
-        <div class="form-group">
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+           <form asp-action="Delete">
+                <div class="form-group">
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                    <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+                </div>
+            </form>
         </div>
-    </form>
-   </div>
-</div>
+ </div>
