--- a/Inmobiliaria_2022/Views/Propietarios/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Details.cshtml
@@ -4,28 +4,58 @@
     ViewData["Title"] = "Detalle";
 }
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Propietario</h4></div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Propietario</h4>
+    </div>
     <div class="card-body">
-    <dl class="row">
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Id)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Dni)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Dni)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Telefono)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Telefono)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
-        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Clave)</dt>
-        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Clave)</dd>
-    </dl>
+        <dl class="row">
+            @*<dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>*@
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Apellido)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Apellido)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Dni)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Dni)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Telefono)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            @*<dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Clave)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Clave)
+            </dd>*@
+        </dl>
+    </div>
+    <div class="card-header border-top border-primary bg-light">
+            <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
     </div>
 </div>
-<div>
-  <form asp-action="Details">
-        <div class="form-group"><a class="btn btn-secondary" asp-action="Index">Volver al Lista</a></div>
-  </form>
-</div>
+
+ 
