--- a/Inmobiliaria_2022/Views/Propietarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Edit.cshtml
@@ -8,8 +8,9 @@
         <div class="card-header border-bottom border-primary bg-light">
             <h4 class="card-title text-primary mt-2">Editar Propietario</h4>
         </div>
-        <div class="card-body">
         <form asp-action="Edit">
+        <div class="card-body">
+        
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="Id" value="@Model.Id" />
             <div class="form-group">
@@ -38,16 +39,20 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
+                
+                <input asp-for="Clave" class="form-control" hidden/>
+                
             </div>
-            <div class="form-group">
-                <input type="submit" value="Editar" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
-            </div>
-        </form>
+           
+        
     </div>
+    <div class="card-header border-top border-primary bg-light">
+        <div class="form-group">
+            <input type="submit" value="Editar" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+        </div>
+    </div>
+    </form>
 </div>
 @*<h4>Cambiar contraseña</h4>
 <hr />
@@ -78,3 +83,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
