--- a/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
@@ -8,8 +8,9 @@
         <div class="card-header border-bottom border-primary bg-light">
             <h4 class="card-title text-primary mt-2">Editar Usuario</h4>
         </div>
-        <div class="card-body">
         <form asp-action="Edit">
+        <div class="card-body">
+        
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         @*a avatar*@
@@ -54,12 +55,16 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
         }
-        <div class="form-group">
+        
+      
+    </div>
+     <div class="card-header border-top border-primary bg-light">
+    <div class="form-group">
             <input type="submit" value="Editar" class="btn btn-primary" />
             <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
         </div>
-      </form>
-    </div>
+        </div>
+    </form>
 </div>
        
 @section Scripts {
