--- a/Inmobiliaria_2022/Views/Usuarios/CambiarClave.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/CambiarClave.cshtml
@@ -1,8 +1,6 @@
 ﻿@model Inmobiliaria_2022.Models.CambioClaveView
 
-@{
-    ViewData["Title"] = "CambiarClave";
-}
+@{ViewData["Title"] = "CambiarClave";}
 
 <h1>Cambiar Clave</h1>
 <hr />
