--- a/Inmobiliaria_2022/Views/Contratos/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Create.cshtml
@@ -28,7 +28,6 @@
                     <input asp-for="Monto" class="form-control" required />
                     <span asp-validation-for="Monto" class="text-danger"></span>
                 </div>
-
                 <div class="form-group">
                     <label class="control-label">Propiedad</label>
                     <select class="form-control" name="InmuebleId">
@@ -39,7 +38,6 @@
                     </select>
                     <span asp-validation-for="InmuebleId" class="text-danger"> </span>
                 </div>
-
                 <div class="form-group">
                     <label class="control-label">Inquilino</label>
                     <select class="form-control" name="InquilinoId">
@@ -59,7 +57,5 @@
         </div>
     </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+@section Scripts {@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}}
 
