--- a/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
@@ -1,21 +1,15 @@
 ﻿@model Inmobiliaria_2022.Models.Propietario
 
-@{
-    ViewData["Title"] = "Crear";
-}
+@{ViewData["Title"] = "Crear";}
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary">Nuevo Propietario</h4>
-        </div>
+        <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary">Nuevo Propietario</h4></div>
         <form asp-action="Create">
         <div class="card-body">
-
-            
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <input asp-for="Id" class="form-control" type="hidden" />
-                </div>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input asp-for="Id" class="form-control" type="hidden" />
+            </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -41,21 +35,19 @@
                 <input asp-for="Email" class="form-control" required/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-           <div class="form-group">
+            <div class="form-group">
                 <label asp-for="Clave" class="control-label"></label>
                 <input asp-for="Clave" class="form-control" required />
                 <span asp-validation-for="Clave" class="text-danger"></span>
-            </div>
-           
-        
+            </div>         
     </div>
     <div class="card-header border-top border-primary bg-light">
-     <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
-            </div>
+         <div class="form-group">
+            <input type="submit" value="Guardar" class="btn btn-primary" />
+            <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+        </div>
     </div>
-    </form>
+ </form>
 </div>
 
       
