--- a/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
@@ -1,57 +1,21 @@
 ﻿@model Inmobiliaria_2022.Models.Propietario
 
-@{
-    ViewData["Title"] = "Delete";
-}
+@{ViewData["Title"] = "Eliminar";}
 
 <div class="card bg-light border border-primary">
-        <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary mt-2">Eliminar Propietario</h4>
-        </div>
-        <div class="card-body">
+    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Propietario</h4></div>
+    <div class="card-body">
     <dl class="row">
-       @* <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>*@
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Dni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        @*<dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Clave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clave)
-        </dd>*@
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Dni)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Dni)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Telefono)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Telefono)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
     </dl>
     </div>
     <div class="card-header border-top border-primary bg-light">
