--- a/Inmobiliaria_2022/Views/Propietarios/VerInmueble.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/VerInmueble.cshtml
@@ -1,111 +1,38 @@
 ﻿@model IEnumerable<Inmobiliaria_2022.Models.Inmueble>
 
-@{
-    ViewData["Title"] = "VerInmueble";
-}
+@{ViewData["Title"] = "VerInmueble";}
 
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light text-center">
-        <h3>Propietario</h3>
-    </div>
-    
+    <div class="card-header border-bottom border-primary bg-light text-center"><h3>Propietario</h3></div>
     <div class="card-body">
         <h5 class="card-title text-primary">Inmuebles Por Propietarios</h5>
         <table class="table">
             <thead>
                 <tr>
-                    @*<th>
-                        @Html.DisplayNameFor(model => model.Id)
-                    </th>*@
-                    <th>
-                        @Html.DisplayNameFor(model => model.Direccion)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Ambientes)
-                    </th>
-                    @*<th>
-                        @Html.DisplayNameFor(model => model.Tipo)
-                    </th>*@
-                    <th>
-                        @Html.DisplayNameFor(model => model.TipoNombre)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Costo)
-                    </th>
-        @*            <th>
-                        @Html.DisplayNameFor(model => model.Superficie)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Latitud)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Longitud)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.EstaPublicado)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.EstaHabilitado)
-                    </th>*@
-                    <th>
-        @*                @Html.DisplayNameFor(model => model.PropietarioId)
-        *@               Propietario
-                    </th>
+                    <th>@Html.DisplayNameFor(model => model.Direccion)</th>
+                    <th>@Html.DisplayNameFor(model => model.Ambientes)</th>
+                    <th>@Html.DisplayNameFor(model => model.TipoNombre)</th>
+                    <th>@Html.DisplayNameFor(model => model.Costo)</th>
+                    <th>@*@Html.DisplayNameFor(model => model.PropietarioId)*@Propietario</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
         @foreach (var item in Model) {
                 <tr>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.Id)
-                    </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Direccion)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Ambientes)
-                    </td>
-                  @*  <td>
-                        @Html.DisplayFor(modelItem => item.Tipo)
-                    </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TipoNombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Costo)
-                    </td>
-                   @* <td>
-                        @Html.DisplayFor(modelItem => item.Superficie)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Latitud)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Longitud)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EstaPublicado)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EstaHabilitado)
-                    </td>*@
+                    <td>@Html.DisplayFor(modelItem => item.Direccion)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Ambientes)</td>
+                    <td>@Html.DisplayFor(modelItem => item.TipoNombre)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Costo)</td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Propietario.Apellido)
                         @Html.DisplayFor(modelItem => item.Propietario.Nombre)
                     </td>
-                    @*<td>
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                    </td>*@
                 </tr>}
              </tbody>
            </table>
-    
-    
-    </div>
-    <div class="card-header border-top border-primary bg-light">
-        <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
-    </div>
- </div>
+     </div>
+     <div class="card-header border-top border-primary bg-light">
+         <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
+     </div>
+</div>
