--- a/Inmobiliaria_2022/Views/Usuarios/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Details.cshtml
@@ -1,46 +1,18 @@
 ﻿@model Inmobiliaria_2022.Models.Usuario
 
-@{
-    ViewData["Title"] = "Detalle";
-}
+@{ViewData["Title"] = "Detalle";}
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light">
-        <h4 class="card-title text-primary mt-2">Usuario</h4>
-    </div>
+    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Usuario</h4></div>
     <div class="card-body">
         <dl class="row">
-        
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Nombre)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Nombre)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Apellido)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Apellido)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-        
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Rol)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.RolNombre)
-            </dd>
-            @*<dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.RolNombre)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.RolNombre)
-            </dd>*@
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Apellido)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Apellido)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
+            <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Rol)</dt>
+            <dd class = "col-sm-10">@Html.DisplayFor(model => model.RolNombre)</dd>
         </dl>
     </div>
     <div class="card-header border-top border-primary bg-light">
