--- a/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
@@ -1,10 +1,8 @@
 ﻿@model Inmobiliaria_2022.Models.Contrato
 
-@{
-    ViewData["Title"] = "Eliminar";
-}
+@{ViewData["Title"] = "Eliminar";}
 <div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Inmueble</h4></div>
+    <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary mt-2">Eliminar Contrato</h4></div>
     <div class="card-body">
         <dl class="row">   
             <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Descripcion)</dt>
