--- a/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="card bg-light border border-primary">
     <div class="card-header border-bottom border-primary bg-light text-center"><h3>Inmueble</h3></div>
     <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
-    <div class="card-body"><h5 class="card-title text-primary">Listar</h5>
+    <div class="card-body"><h5 class="card-title text-primary">Listado de Inmuebles</h5>
 
         <div class="input-group-prepend mb-2">
             <a class="btn btn-info" asp-action="Index" asp-route-id="1">Todos</a>
@@ -36,7 +36,7 @@
             <td class="d-flex justify-content-center">
              <div class="btn-group" role="group">
                  <a asp-action="Edit" asp-route-id="@item.Id" asp-ro class="btn btn-warning"><i class="fas fa-edit">Editar</i></a>
-                 <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-dark"><i class="fas fa-edit">Detalle</i></a>
+                 <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-dark"><i class="fas fa-edit">Detalles</i></a>
                  <a asp-action="Delete" asp-route-id="@item.Id" asp-ro class="btn btn-danger"><i class="fas fa-edit">Eliminar</i></a>
 
                 @if (item.EstaPublicado == false)
