--- a/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
@@ -12,11 +12,7 @@
         <div class="card-body">
         
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+                <input asp-for="Id" type="hidden" class="form-control" />
             <div class="form-group">
                 <label asp-for="Direccion" class="control-label"></label>
                 <input asp-for="Direccion" class="form-control" />
