--- a/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Inmobiliaria_2022.Models.Propietario>
 
-@{ViewData["Title"] = "Propietarios";}
+@{ViewData["Title"] = "Lista";}
 <div class="card bg-light border border-primary">
     <div class="card-header border-bottom border-primary bg-light text-center"><h3>Propietario</h3></div>
     <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
     <div class="card-body">
-        <h5 class="card-title text-primary">Lista</h5>
+        <h5 class="card-title text-primary">Listado de Propietarios</h5>
 <table class="table">
     <thead>
         <tr>
