--- a/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
@@ -4,7 +4,7 @@
 
 <div class="card bg-light border border-primary">
         <div class="card-header border-bottom border-primary bg-light"><h4 class="card-title text-primary">Nuevo Usuario</h4></div>
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create" enctype="multipart/form-data">@*22/4/2022*@
         <div class="card-body">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
