--- a/Inmobiliaria_2022/Views/Usuarios/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Index.cshtml
@@ -6,18 +6,15 @@
     <div class="card-header border-bottom border-primary bg-light text-center"><h3>Usuario</h3></div>
     <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
     <div class="card-body">
-        <h5 class="card-title text-primary">Lista</h5>
+        <h5 class="card-title text-primary">Listado de Usuarios</h5>
 <table class="table">
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.Avatar) 
-            @*<th>@Html.DisplayNameFor(model => model.Id)</th>*@
             <th>@Html.DisplayNameFor(model => model.Nombre)</th>
             <th>@Html.DisplayNameFor(model => model.Apellido)</th>
             <th>@Html.DisplayNameFor(model => model.Email)</th>
-            @*<th>@Html.DisplayNameFor(model => model.Clave)</th>*@
             <th>@Html.DisplayNameFor(model => model.Rol)</th>
-           @*<th>@Html.DisplayNameFor(model => model.RolNombre)</th>*@
             <th></th>
         </tr>
     </thead>
@@ -29,12 +26,9 @@
                 <img src="@item.Avatar" class="rounded-circle" alt="Perfil" width="35" height="35">
             @*else{}*@
 			</td>
-            @*<td>@Html.DisplayFor(modelItem => item.Id)</td>*@
             <td>@Html.DisplayFor(modelItem => item.Nombre)</td>
             <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
             <td>@Html.DisplayFor(modelItem => item.Email)</td>
-           @*<td>@Html.DisplayFor(modelItem => item.Clave)</td>*@
-           @*<td>@Html.DisplayFor(modelItem => item.Rol)</td>*@
             <td>@Html.DisplayFor(modelItem => item.RolNombre)</td>
             <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id  }) |
